test/org/midica/testfiles/failing/chord-redefined.midica
INCLUDE inc/instruments.midica
CHORD test c,d,e
CHORD test c,d,e
